Update accounts flow and shared footer

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
     "sharp": "^0.33.4",
+    "razorpay": "^2.9.3",
+    "stripe": "^14.24.0",
     "uuid": "^9.0.1"
   }
 }
