--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
     "firebase-admin": "^13.5.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
+    "razorpay": "^2.9.6",
     "sharp": "^0.33.4",
-    "razorpay": "^2.9.3",
     "stripe": "^14.24.0",
     "uuid": "^9.0.1"
   }
