--- a/server/.env.example
+++ b/server/.env.example
@@ -4,12 +4,21 @@ RAZORPAY_KEY_ID=rzp_live_YOUR_KEY_ID_HERE
 RAZORPAY_KEY_SECRET=YOUR_KEY_SECRET_HERE
 RAZORPAY_WEBHOOK_SECRET=YOUR_WEBHOOK_SECRET_HERE
 
-# Firebase Configuration
+# Firebase Configuration (Server-side - Admin SDK)
 # Set this to a valid JSON string of your Firebase service account key
 # You can download this from Firebase Console > Project Settings > Service Accounts
 # Example: FIREBASE_SERVICE_ACCOUNT={"type":"service_account","project_id":"your-project",...}
 # OR leave empty if you're using ADC (Application Default Credentials)
 FIREBASE_SERVICE_ACCOUNT=
+
+# Firebase Configuration (Client-side - Web SDK)
+# Get these from Firebase Console > Project Settings > Your apps > Web
+FIREBASE_API_KEY=YOUR_FIREBASE_API_KEY_HERE
+FIREBASE_AUTH_DOMAIN=YOUR_FIREBASE_AUTH_DOMAIN_HERE
+FIREBASE_PROJECT_ID=YOUR_FIREBASE_PROJECT_ID_HERE
+FIREBASE_STORAGE_BUCKET=YOUR_FIREBASE_STORAGE_BUCKET_HERE
+FIREBASE_MESSAGING_SENDER_ID=YOUR_FIREBASE_MESSAGING_SENDER_ID_HERE
+FIREBASE_APP_ID=YOUR_FIREBASE_APP_ID_HERE
 
 # Optional: Port to run the server on (default: 3000)
 PORT=3000
