security: add documentation files to .gitignore to prevent sensitive info exposure

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,20 @@ firebase-key.json
 server/firebase-key.json
 *.serviceAccountKey.json
 
+# Documentation & Internal Guides (contains sensitive setup info)
+*_GUIDE.md
+*_SUMMARY.md
+COMPLETE_FLOW_GUIDE.md
+PAYMENT_FIXES_SUMMARY.md
+ENV_SETUP.md
+ENV_SETUP_COMPLETE.md
+TESTING_GUIDE.md
+GLOBAL_COMPONENTS_GUIDE.md
+NAVIGATION_LINK_GUIDE.md
+QUICK_REFERENCE.txt
+FIX_404_ERROR_GUIDE.txt
+*.log
+
 # Python
 __pycache__/
 *.py[cod]
