High Quality AI Background Remover - Complete 3-Tier System Update
Frontend Updates:
- Improved routing logic with 8MB/15MB thresholds for better quality
- Enhanced error handling with timeout (3 min) and fallback mechanisms
- Better user messages with emoji indicators and tier info
- Added progress tracking and detailed logging
- Optimized storage limit checks (9.5 MB sessionStorage)

Backend Updates (Render - Tier 2):
- Enhanced CORS configuration for all origins
- Comprehensive error handling with traceback logging
- Improved image preprocessing and validation
- Optimized PNG compression (level 6)
- Better logging with emoji indicators
- Detailed API response with size info

Backend Updates (Cloud Run - Tier 3):
- Premium alpha matting for highest quality edges
- Memory optimization with gc.collect()
- Large file optimization (auto-resize >4096px)
- Enhanced error handling and logging
- Optimized compression for large outputs
- Detailed feature documentation

Requirements & Documentation:
- Updated requirements.txt with clear comments
- Updated requirements-cloudrun.txt with numpy
- Added comprehensive DEPLOYMENT_GUIDE_HINDI.md
- Step-by-step setup instructions in Hindi
- Troubleshooting guide and monitoring tips
- Complete free tier limits and cost breakdown

System Architecture:
- Tier 1: 0-15 MB  IMG.LY (Browser) - Instant, Unlimited, Free
- Tier 2: 15-50 MB  Rembg (Render) - Professional, 750hrs/mo Free
- Tier 3: 50-100 MB  Rembg+Alpha (Cloud Run) - Premium, 6k images/mo Free

All files tested and production-ready!

--- a/bg-remover-backend/requirements-cloudrun.txt
+++ b/bg-remover-backend/requirements-cloudrun.txt
@@ -1,7 +1,26 @@
+# ============================================
+# GOOGLE CLOUD RUN REQUIREMENTS
+# Python 3.11+ (Tier 3: 50-100 MB files)
+# ============================================
+
+# Web Framework
 Flask==3.0.0
 flask-cors==4.0.0
+
+# AI Background Removal
 rembg==2.0.57
+
+# Image Processing
 Pillow==10.1.0
+
+# Production Server
 gunicorn==21.2.0
+
+# ML Runtime
 onnxruntime==1.16.3
+
+# Numerical Processing (for Cloud Run optimization)
 numpy==1.26.2
+
+# Note: Cloud Run will install via Dockerfile
+# Optimized for large file processing with alpha matting
