--- a/bg-remover-backend/requirements.txt
+++ b/bg-remover-backend/requirements.txt
@@ -1,6 +1,23 @@
+# ============================================
+# RENDER BACKEND REQUIREMENTS
+# Python 3.11+ (Tier 2: 15-50 MB files)
+# ============================================
+
+# Web Framework
 Flask==3.0.0
 flask-cors==4.0.0
+
+# AI Background Removal
 rembg==2.0.57
+
+# Image Processing
 Pillow==10.1.0
+
+# Production Server
 gunicorn==21.2.0
+
+# ML Runtime
 onnxruntime==1.16.3
+
+# Note: Render will auto-install from this file
+# Deploy command: pip install -r requirements.txt
