--- a/bg-remover-backend/requirements-cloudrun.txt
+++ b/bg-remover-backend/requirements-cloudrun.txt
@@ -7,8 +7,8 @@
 Flask==3.0.0
 flask-cors==4.0.0
 
-# AI Background Removal
-rembg==2.0.57
+# AI Background Removal (latest stable version)
+rembg[gpu]==2.0.56
 
 # Image Processing
 Pillow==10.1.0
