--- a/bg-remover-backend/requirements.txt
+++ b/bg-remover-backend/requirements.txt
@@ -7,8 +7,8 @@
 Flask==3.0.0
 flask-cors==4.0.0
 
-# AI Background Removal (latest stable version)
-rembg[gpu]==2.0.56
+# AI Background Removal (using latest available version)
+rembg
 
 # Image Processing
 Pillow==10.1.0
