Add apt-packages file and fix rembg dependencies for Render deployment

--- a/bg-remover-backend/requirements.txt
+++ b/bg-remover-backend/requirements.txt
@@ -7,8 +7,8 @@
 Flask==3.0.0
 flask-cors==4.0.0
 
-# AI Background Removal (using latest available version)
-rembg
+# AI Background Removal
+rembg==2.0.50
 
 # Image Processing
 Pillow==10.1.0
@@ -19,5 +19,9 @@ gunicorn==21.2.0
 # ML Runtime
 onnxruntime==1.16.3
 
+# Additional dependencies for rembg
+numpy==1.24.3
+opencv-python-headless==4.8.1.78
+
 # Note: Render will auto-install from this file
-# Deploy command: pip install -r requirements.txt
+# System packages in apt-packages file
