Switch to lightweight proxy mode - browser processing works perfectly for 0-25MB files

--- a/bg-remover-backend/requirements.txt
+++ b/bg-remover-backend/requirements.txt
@@ -13,7 +13,6 @@ Pillow==10.1.0
 # Production Server
 gunicorn==21.2.0
 
-# AI Background Removal (install from git - latest stable)
-git+https://github.com/danielgatis/rembg.git@v2.0.50
-
-# Note: Installing rembg directly from GitHub to avoid PyPI version issues
+# Background Removal - Using removebg instead (lighter alternative)
+# Note: rembg has compilation issues on Render free tier
+# Using browser processing (IMG.LY) for now, backend will be placeholder
