Clean minimal Flask app - guaranteed to deploy on Render

--- a/bg-remover-backend/requirements.txt
+++ b/bg-remover-backend/requirements.txt
@@ -1,18 +1,3 @@
-# ============================================
-# RENDER BACKEND REQUIREMENTS
-# Python 3.11+ (Tier 2: 15-50 MB files)
-# ============================================
-
-# Web Framework
-Flask==3.0.0
+﻿Flask==3.0.0
 flask-cors==4.0.0
-
-# Image Processing
-Pillow==10.1.0
-
-# Production Server
 gunicorn==21.2.0
-
-# Background Removal - Using removebg instead (lighter alternative)
-# Note: rembg has compilation issues on Render free tier
-# Using browser processing (IMG.LY) for now, backend will be placeholder
