--- a/bg-remover-backend/requirements.txt
+++ b/bg-remover-backend/requirements.txt
@@ -2,7 +2,4 @@
 flask-cors==4.0.0
 gunicorn==21.2.0
 Pillow==10.2.0
-onnxruntime==1.16.3
-opencv-python-headless==4.8.1.78
-scikit-image==0.22.0
-rembg==2.0.50
+requests==2.31.0
