--- a/bg-remover-backend/Dockerfile
+++ b/bg-remover-backend/Dockerfile
@@ -1,16 +1,17 @@
-# Use Python 3.11 slim image for smaller size
+# Use Python 3.11 slim image
 FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies for image processing
+# Install system dependencies for rembg and image processing
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
     libglib2.0-0 \
+    libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
+# Copy requirements and install Python packages
 COPY requirements-cloudrun.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -24,5 +25,5 @@ ENV PYTHONUNBUFFERED=1
 # Expose port
 EXPOSE 8080
 
-# Run the application with gunicorn
-CMD exec gunicorn --bind :$PORT --workers 2 --threads 4 --timeout 300 app:app
+# Run with gunicorn
+CMD exec gunicorn --bind :$PORT --workers 1 --threads 2 --timeout 300 --max-requests 100 app:app
