--- a/bg-remover-backend/requirements-cloudrun.txt
+++ b/bg-remover-backend/requirements-cloudrun.txt
@@ -1,23 +1,17 @@
 # ============================================
-# GOOGLE CLOUD RUN REQUIREMENTS
-# Python 3.11+ (Tier 3: 50-100 MB files)
+# GOOGLE CLOUD RUN REQUIREMENTS - Rembg AI
+# 100% Professional Quality Background Removal
 # ============================================
 
-# Web Framework
 Flask==3.0.0
 flask-cors==4.0.0
-
-# AI Background Removal (using latest available version)
-rembg
-
-# Image Processing
-Pillow==10.1.0
-
-# Production Server
 gunicorn==21.2.0
-
-# ML Runtime
+Pillow==10.2.0
+rembg==2.0.50
 onnxruntime==1.16.3
+opencv-python-headless==4.8.1.78
+scikit-image==0.22.0
+numpy==1.24.3
 
 # Numerical Processing (for Cloud Run optimization)
 numpy==1.26.2
