--- a/excel-unlocker/requirements.txt
+++ b/excel-unlocker/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.0.1
-openpyxl==3.0.7
-msoffcrypto-tool==4.12.0
-Werkzeug==2.0.1
+Flask>=3.0.0
+Flask-CORS>=4.0.0
+openpyxl>=3.1.0
+msoffcrypto-tool>=5.0.0
+Werkzeug>=3.0.0
