--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,17 @@ server/firebase-key.json
 *.serviceAccountKey.json
 
 # Documentation & Internal Guides (contains sensitive setup info)
+# All .md files except README.md
+*.md
+!README.md
+
+# Specific important docs to ignore
 *_GUIDE.md
 *_SUMMARY.md
+*_IMPLEMENTATION.md
+*_EXPLANATION.md
+*_SETUP.md
+*_FEATURES.md
 COMPLETE_FLOW_GUIDE.md
 PAYMENT_FIXES_SUMMARY.md
 ENV_SETUP.md
@@ -22,6 +31,19 @@ ENV_SETUP_COMPLETE.md
 TESTING_GUIDE.md
 GLOBAL_COMPONENTS_GUIDE.md
 NAVIGATION_LINK_GUIDE.md
+GOOGLE_CLOUD_FREE_TIER_GUIDE.md
+OPTIMIZED_DEPLOYMENT_GUIDE.md
+ALL_FEATURES_IMPLEMENTED.md
+COMPLETE_FEATURES_EXPLANATION.md
+IMAGE_EDITOR_FEATURES.md
+PROFESSIONAL_EDITOR_SUMMARY.md
+IMPLEMENTATION_SUMMARY.md
+CLOUDRUN_URL_SETUP.md
+GOOGLE_CLOUD_RUN_SETUP.md
+RENDER_DEPLOYMENT.md
+DEPLOYMENT_GUIDE.md
+EXCEL_UNLOCKER_GUIDE.md
+EXCEL_UNLOCKER_SETUP.md
 QUICK_REFERENCE.txt
 FIX_404_ERROR_GUIDE.txt
 *.log
