Fix Node.js ESM warning - Add type module to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "API for easyjpgtopdf.com",
   "main": "api/create-order.js",
+  "type": "module",
   "dependencies": {
     "razorpay": "^2.9.2",
     "firebase-admin": "^11.11.0"
