--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,11 @@
       "source": "/index.php",
       "destination": "/index.html",
       "permanent": true
+    },
+    {
+      "source": "https://www.easyjpgtopdf.com/:path*",
+      "destination": "https://easyjpgtopdf.com/:path*",
+      "permanent": true
     }
   ],
   "rewrites": [
