Add: Email receipt notification system with Resend integration

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "destination": "/api/create-order.js"
     },
     {
+      "source": "/api/send-receipt-email",
+      "destination": "/api/send-receipt-email.js"
+    },
+    {
       "source": "/api/payments/razorpay/webhook",
       "destination": "/api/payments/razorpay/webhook.js"
     }
