fix: align bg workspace and backend quality

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ MANIFEST
 venv/
 env/
 ENV/
+.venv*/
 
 # IDE
 .idea/
@@ -112,6 +113,14 @@ Thumbs.db
 
 # Local development
 .local/
+.continue/
+.cursor/
+fetched-background-workspace.html
+run_backend_test.py
+run_frontend_fetch.py
+test_backend.py
+sample-*.jpg
+output-*.png
 
 # Testing
 /coverage
