Fix: Background remover - Optimized preview, fixed download limits, added premium checks
- Optimized preview size (1700KB -> 200-300KB) for faster loading
- Fixed download logic: â‰¤500KB free download, >500KB requires Pro plan
- Updated limits: 10MB upload free, 500KB download free
- Added automatic compression for free users
- Premium users get choice (original or compressed)
- Added file gallery with preview (like remove.bg)
- Added + button for multiple file uploads
- Fixed CORS errors for file:// protocol
- Instant upload implementation
- Google Cloud Run backend with u2net rembg
- Complete architecture documentation

--- a/bg-remover-backend/Dockerfile
+++ b/bg-remover-backend/Dockerfile
@@ -1,3 +1,8 @@
+# ============================================
+# Dockerfile for Google Cloud Run
+# Background Remover with Rembg U²-Net Latest
+# ============================================
+
 # Use Python 3.11 slim image
 FROM python:3.11-slim
 
@@ -21,9 +26,11 @@ COPY app-cloudrun.py app.py
 # Set environment variables
 ENV PORT=8080
 ENV PYTHONUNBUFFERED=1
+ENV REMBG_MODEL=u2net
 
 # Expose port
 EXPOSE 8080
 
 # Run with gunicorn
+# Note: Model will auto-download on first request (~180MB)
 CMD exec gunicorn --bind :$PORT --workers 1 --threads 2 --timeout 300 --max-requests 100 app:app
