--- a/bg-remover-backend/requirements-cloudrun.txt
+++ b/bg-remover-backend/requirements-cloudrun.txt
@@ -1,6 +1,6 @@
 # ============================================
 # GOOGLE CLOUD RUN REQUIREMENTS - Rembg AI
-# 100% Professional Quality Background Removal
+# Latest U²-Net Model - Professional Quality
 # ============================================
 
 Flask==3.0.0
@@ -11,10 +11,8 @@ rembg==2.0.50
 onnxruntime==1.16.3
 opencv-python-headless==4.8.1.78
 scikit-image==0.22.0
-numpy==1.24.3
-
-# Numerical Processing (for Cloud Run optimization)
 numpy==1.26.2
 
-# Note: Cloud Run will install via Dockerfile
+# Note: rembg will auto-download u2net model on first run
 # Optimized for large file processing with alpha matting
+# Latest u2net model ensures best quality and no over-cleaning
