--- a/server/api/pdf-ocr/requirements.txt
+++ b/server/api/pdf-ocr/requirements.txt
@@ -1,5 +1,5 @@
-pytesseract==0.3.10
-Pillow==10.1.0
-opencv-python==4.8.1.78
-numpy==1.24.3
+pytesseract>=0.3.10
+Pillow>=10.0.0
+opencv-python>=4.8.0
+numpy>=1.24.0
 
