--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "render-start": "node server.js"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.0.0",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
