Add Vercel serverless functions for cloud status and OCR status API endpoints

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "api/create-order.js",
   "dependencies": {
     "razorpay": "^2.9.2",
-    "firebase-admin": "^11.11.0"
+    "firebase-admin": "^11.11.0",
+    "@google-cloud/vision": "^4.0.0"
   },
   "engines": {
     "node": "22.x"
