--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,14 @@
     {
       "source": "/api/payments/razorpay/webhook",
       "destination": "/api/payments/razorpay/webhook.js"
+    },
+    {
+      "source": "/api/cloud/status",
+      "destination": "/api/cloud/status.js"
+    },
+    {
+      "source": "/api/pdf-ocr/status",
+      "destination": "/api/pdf-ocr/status.js"
     }
   ],
   "headers": [
