--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,39 @@
 {
-  "name": "easyjpgtopdf-word2pdf-server",
+  "name": "pdf-editor-backend",
   "version": "1.0.0",
-  "private": true,
-  "type": "commonjs",
+  "description": "Backend server for PDF editor with OCR, editing, and cloud integration",
   "main": "server.js",
-  "license": "MIT",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "cross-env NODE_ENV=development node server.js",
-    "render-build": "npm install",
-    "render-start": "node server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "pdf",
+    "editor",
+    "ocr",
+    "google-cloud",
+    "express"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "@google-cloud/vision": "^4.3.3",
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "firebase-admin": "^13.5.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^3.11.174",
-    "razorpay": "^2.9.6",
-    "sharp": "^0.33.4",
-    "stripe": "^14.24.0",
-    "uuid": "^9.0.1"
+    "pdfjs-dist": "^3.11.174"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
