--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
     "firebase-admin": "^13.5.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^3.11.174"
+    "pdfjs-dist": "^3.11.174",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
