--- a/server/package.json
+++ b/server/package.json
@@ -20,16 +20,24 @@
   "license": "MIT",
   "dependencies": {
     "@google-cloud/vision": "^4.3.3",
+    "bcrypt": "^5.1.1",
     "canvas": "^2.11.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "firebase-admin": "^13.5.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^3.11.174",
+    "razorpay": "^2.9.2",
+    "redis": "^4.6.12",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
