--- a/bg-remover-backend/Dockerfile
+++ b/bg-remover-backend/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /app
 
 # Install system dependencies for rembg and image processing
 RUN apt-get update && apt-get install -y \
-    libgl1-mesa-glx \
+    libgl1 \
     libglib2.0-0 \
     libgomp1 \
     && rm -rf /var/lib/apt/lists/*
