Fix: Add background removal proxy endpoint to fix CORS issues

--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,14 @@
     {
       "source": "/api/pdf-ocr/status",
       "destination": "/api/pdf-ocr/status.js"
+    },
+    {
+      "source": "/api/background-remove",
+      "destination": "/api/background-remove.js"
+    },
+    {
+      "source": "/api/background-remove/health",
+      "destination": "/api/background-remove.js"
     }
   ],
   "headers": [
