Add background-remove-v2-alt proxy and update vercel.json routes

--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,30 @@
     {
       "source": "/api/background-remove/health",
       "destination": "/api/background-remove.js"
+    },
+    {
+      "source": "/api/background-remove-v2",
+      "destination": "/api/background-remove-v2.js"
+    },
+    {
+      "source": "/api/background-remove-v2/health",
+      "destination": "/api/background-remove-v2.js"
+    },
+    {
+      "source": "/api/background-remove-v2/usage",
+      "destination": "/api/background-remove-v2.js"
+    },
+    {
+      "source": "/api/background-remove-v2-alt",
+      "destination": "/api/background-remove-v2-alt.js"
+    },
+    {
+      "source": "/api/background-remove-v2-alt/health",
+      "destination": "/api/background-remove-v2-alt.js"
+    },
+    {
+      "source": "/api/background-remove-v2-alt/usage",
+      "destination": "/api/background-remove-v2-alt.js"
     }
   ],
   "headers": [
