Add PyTorch U2NetP background remover with device tracking, compression, and enhanced limits
- Backend: Pure PyTorch U2NetP implementation (Cloud Run compatible)
- Free users: 50 images/month, 1MB upload, 10MB total, 150KB compressed downloads
- Premium users: Unlimited images, 50MB upload, 500MB total, high quality downloads
- Device fingerprinting and IP tracking for free users
- Premium authentication required
- Usage dashboard with real-time stats
- min-instances: 1 for always warm service
- Auto-compression for free downloads

--- a/vercel.json
+++ b/vercel.json
@@ -62,6 +62,30 @@
     {
       "source": "/api/background-remove-v2-alt/usage",
       "destination": "/api/background-remove-v2-alt.js"
+    },
+    {
+      "source": "/api/background-remove-rembg",
+      "destination": "/api/background-remove-rembg.js"
+    },
+    {
+      "source": "/api/background-remove-rembg/health",
+      "destination": "/api/background-remove-rembg.js"
+    },
+    {
+      "source": "/api/background-remove-rembg/usage",
+      "destination": "/api/background-remove-rembg.js"
+    },
+    {
+      "source": "/api/background-remove-pytorch",
+      "destination": "/api/background-remove-pytorch.js"
+    },
+    {
+      "source": "/api/background-remove-pytorch/health",
+      "destination": "/api/background-remove-pytorch.js"
+    },
+    {
+      "source": "/api/background-remove-pytorch/usage",
+      "destination": "/api/background-remove-pytorch.js"
     }
   ],
   "headers": [
