--- a/bg-remover-v2/backend/requirements-alternative.txt
+++ b/bg-remover-v2/backend/requirements-alternative.txt
@@ -1,7 +1,8 @@
 Flask==3.0.0
 flask-cors==4.0.0
 gunicorn==21.2.0
-rembg==2.0.50
-onnxruntime==1.13.1
 Pillow==10.2.0
+scikit-image==0.22.0
+numpy==1.26.2
+scipy==1.13.1
 
