--- a/vercel.json
+++ b/vercel.json
@@ -1,91 +1,15 @@
 {
   "version": 2,
-  "github": {
-    "silent": true
-  },
-  "redirects": [
+  "builds": [
     {
-      "source": "/index.php",
-      "destination": "/index.html",
-      "permanent": true
+      "src": "**/*.html",
+      "use": "@vercel/static"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/create-order",
-      "destination": "/api/create-order.js"
-    },
-    {
-      "source": "/api/send-receipt-email",
-      "destination": "/api/send-receipt-email.js"
-    },
-    {
-      "source": "/api/payments/razorpay/webhook",
-      "destination": "/api/payments/razorpay/webhook.js"
-    },
-    {
-      "source": "/api/cloud/status",
-      "destination": "/api/cloud/status.js"
-    },
-    {
-      "source": "/api/pdf-ocr/status",
-      "destination": "/api/pdf-ocr/status.js"
-    },
-    {
-      "source": "/api/background-remove",
-      "destination": "/api/background-remove.js"
-    },
-    {
-      "source": "/api/background-remove/health",
-      "destination": "/api/background-remove.js"
-    },
-    {
-      "source": "/api/background-remove-v2",
-      "destination": "/api/background-remove-v2.js"
-    },
-    {
-      "source": "/api/background-remove-v2/health",
-      "destination": "/api/background-remove-v2.js"
-    },
-    {
-      "source": "/api/background-remove-v2/usage",
-      "destination": "/api/background-remove-v2.js"
-    },
-    {
-      "source": "/api/background-remove-v2-alt",
-      "destination": "/api/background-remove-v2-alt.js"
-    },
-    {
-      "source": "/api/background-remove-v2-alt/health",
-      "destination": "/api/background-remove-v2-alt.js"
-    },
-    {
-      "source": "/api/background-remove-v2-alt/usage",
-      "destination": "/api/background-remove-v2-alt.js"
-    },
-    {
-      "source": "/api/background-remove-rembg",
-      "destination": "/api/background-remove-rembg.js"
-    },
-    {
-      "source": "/api/background-remove-rembg/health",
-      "destination": "/api/background-remove-rembg.js"
-    },
-    {
-      "source": "/api/background-remove-rembg/usage",
-      "destination": "/api/background-remove-rembg.js"
-    },
-    {
-      "source": "/api/background-remove-pytorch",
-      "destination": "/api/background-remove-pytorch.js"
-    },
-    {
-      "source": "/api/background-remove-pytorch/health",
-      "destination": "/api/background-remove-pytorch.js"
-    },
-    {
-      "source": "/api/background-remove-pytorch/usage",
-      "destination": "/api/background-remove-pytorch.js"
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ],
   "headers": [
@@ -103,37 +27,15 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
         }
       ]
     },
     {
-      "source": "/(.*)\\.(jpg|jpeg|png|gif|ico|svg|webp)",
+      "source": "/(.*\\.(js|css|json|xml|txt|ico|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|eot))",
       "headers": [
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)\\.(js|css)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)\\.(html|htm)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=3600, must-revalidate"
         }
       ]
     }
