Fix vercel.json regex pattern for static assets

--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(js|css|json|xml|txt|ico|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|eot))",
+      "source": "/:path*.(js|css|json|xml|txt|ico|png|jpg|jpeg|gif|svg|webp|woff|woff2|ttf|eot)",
       "headers": [
         {
           "key": "Cache-Control",
