--- a/.vercelignore
+++ b/.vercelignore
@@ -1,35 +1,46 @@
-node_modules
+# Large model files
+bg-remover-pytorch/backend/*.pth
+bg-remover-pytorch/backend/*.onnx
+bg-remover-pytorch/backend/*.pt
+bg-remover-pytorch/backend/models/
+
+# Virtual environments
 .venv*/
-.venv312/
-.env
-.git
-.github
-.vs
+venv/
+env/
+ENV/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Large DLL files
+*.dll
+*.so
+*.dylib
+
+# Node modules
+node_modules/
+server/node_modules/
+
+# Logs
 *.log
+logs/
+
+# Development files
 *.md
 !README.md
-scripts/
-excel-unlocker/
-bg-remover-backend/
-image-repair-backend/
-server/
-services/
-frontend/
-pdf-unlocker/
-tools/
-*.ps1
-*.py
-Add-Comments.ps1
-Fix-Comment-Styles.ps1
-Rename-AI-Page.ps1
-SmartGitDeploy.ps1
-deploy-render.ps1
-start-excel-unlocker.ps1
-stop-excel-unlocker.ps1
-fix_image_tool_headers.py
-update_header.py
-update_headers.py
-update_image_tools.py
-update_image_tools_dropdown.py
-update_image_tools_grid.py
-// Force deployment
+
+# IDE
+.idea/
+.vscode/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Excel unlocker uploads
+excel-unlocker/uploads/*
+excel-unlocker/logs/*
