Fix Vercel deployment: Exclude duplicate API functions to stay under 12 function limit - Add 5 duplicate/unused API functions to .vercelignore - Reduces total functions from 16 to 11 (under Hobby plan limit of 12) - Deployment now succeeds successfully

--- a/.vercelignore
+++ b/.vercelignore
@@ -44,3 +44,10 @@ Thumbs.db
 # Excel unlocker uploads
 excel-unlocker/uploads/*
 excel-unlocker/logs/*
+
+# Duplicate/Unused API functions (to stay under 12 function limit)
+api/background-remove.js
+api/background-remove-v2-alt.js
+api/background-remove-rembg.js
+api/free-preview-bg.js
+api/premium-bg.js
