--- a/bg-removal-backend/Dockerfile
+++ b/bg-removal-backend/Dockerfile
@@ -1,11 +1,13 @@
 # Dockerfile for Background Removal Service with BiRefNet GPU
 FROM python:3.11-slim
 
-# Install system dependencies
+# Install system dependencies (including OpenCV dependencies)
 RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
     libgomp1 \
+    libopencv-dev \
+    python3-opencv \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
