Fix background remover: API routing, duplicate export, Cloud Run GPU + BiRefNet + TensorRT FP16 integration

--- a/vercel.json
+++ b/vercel.json
@@ -49,6 +49,10 @@
       "destination": "/api/router?endpoint=remove-background"
     },
     {
+      "source": "/api/tools/:path*",
+      "destination": "/api/tools/index.js"
+    },
+    {
       "source": "/(.*)",
       "destination": "/$1"
     }
