Fix route extraction: Use query params from Vercel rewrites, fix duplicate addCredits export

--- a/vercel.json
+++ b/vercel.json
@@ -49,8 +49,20 @@
       "destination": "/api/router?endpoint=remove-background"
     },
     {
-      "source": "/api/tools/:path*",
-      "destination": "/api/tools/index.js"
+      "source": "/api/tools/bg-remove-free",
+      "destination": "/api/tools/index.js?route=bg-remove-free"
+    },
+    {
+      "source": "/api/tools/bg-remove-premium",
+      "destination": "/api/tools/index.js?route=bg-remove-premium"
+    },
+    {
+      "source": "/api/tools/unlock-excel",
+      "destination": "/api/tools/index.js?route=unlock-excel"
+    },
+    {
+      "source": "/api/tools/health",
+      "destination": "/api/tools/index.js?route=health"
     },
     {
       "source": "/(.*)",
