fix: Fix Dockerfile path and remove syntax error in commented code

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,30 @@
+# FastAPI and server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-boto3==1.29.7
-openpyxl==3.1.2
 python-multipart==0.0.6
-google-cloud-storage==2.10.0
-google-cloud-documentai>=2.0.0
-pydantic==2.3.0
-pydantic-core==2.6.3
 
+# Google Cloud Services
+google-cloud-storage==2.10.0
+google-cloud-documentai==2.20.1
+
+# PDF Processing
+pdfminer.six==20221105
+PyPDF2==3.0.1
+
+# Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
+
+# Word Document Processing
+python-docx==1.1.0
+
+# Firebase Authentication
+firebase-admin==6.2.0
+
+# Configuration
+pydantic==2.5.0
+pydantic-settings==2.1.0
+
+# Utilities
+python-dotenv==1.0.0
