--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -3,17 +3,28 @@ __pycache__
 *.pyo
 *.pyd
 .Python
-*.so
-*.egg
-*.egg-info
-dist
-build
-.env
-.venv
-venv/
-ENV/
 env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
 .git
 .gitignore
+.mypy_cache
+.pytest_cache
+.hypothesis
+.env
+.env.local
 *.md
-
+.DS_Store
+*.swp
+*.swo
+*~
