--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-# Use Python 3.11 slim image
+# Use Python 3.11 slim as base image
 FROM python:3.11-slim
 
 # Set working directory
@@ -6,7 +6,12 @@ WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    gcc \
+    libreoffice \
+    libreoffice-writer \
+    fonts-dejavu \
+    fonts-dejavu-core \
+    fonts-dejavu-extra \
+    poppler-utils \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
@@ -16,15 +21,14 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY . .
+COPY *.py ./
 
 # Expose port
 EXPOSE 8080
 
-# Set environment variables
+# Set environment variable
 ENV PYTHONUNBUFFERED=1
 ENV PORT=8080
 
 # Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
-
