--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ google-cloud-documentai==2.20.1
 # PDF Processing
 pdfminer.six==20221105
 PyPDF2==3.0.1
+PyMuPDF==1.23.8  # fitz for PDF manipulation and JPG conversion
+Pillow==10.1.0  # PIL for image processing
 
 # Testing
 pytest==7.4.3
@@ -28,3 +30,5 @@ pydantic-settings==2.1.0
 
 # Utilities
 python-dotenv==1.0.0
+loguru==0.7.2  # Better logging
+requests==2.31.0  # For downloading PDFs from URLs
