--- a/vercel.json
+++ b/vercel.json
@@ -12,12 +12,20 @@
       "destination": "/frontend/pdf-to-word.html"
     },
     {
+      "source": "/pdf-to-word-converter",
+      "destination": "/frontend/pdf-to-word-converter.html"
+    },
+    {
       "source": "/pdf-to-jpg",
       "destination": "/frontend/pdf-to-jpg.html"
     },
     {
       "source": "/pdf-editor",
       "destination": "/frontend/pdf-editor.html"
+    },
+    {
+      "source": "/sitemap.xml",
+      "destination": "/frontend/sitemap.xml"
     },
     {
       "source": "/(.*)",
