Fix: Update vercel.json paths for proper routing

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "rewrites": [
     {
       "source": "/pdf-to-word",
-      "destination": "/pdf-to-word.html"
+      "destination": "/frontend/pdf-to-word.html"
     },
     {
       "source": "/pdf-to-word-converter",
@@ -17,7 +17,7 @@
     },
     {
       "source": "/pdf-to-jpg",
-      "destination": "/pdf-to-jpg.html"
+      "destination": "/frontend/pdf-to-jpg.html"
     },
     {
       "source": "/pdf-editor",
