Complete: PDF to Word page rebuild with full structure - Hero, About (400+ words), Related Tools, How to Use, Why Choose, FAQ, Feedback, SSL Badge, Footer. Fixed 404 error. Updated SEO, H1-H4 headings, sitemap. No duplicates.

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
       "destination": "/frontend/pdf-to-word.html"
     },
     {
+      "source": "/pdf-to-word.html",
+      "destination": "/frontend/pdf-to-word.html"
+    },
+    {
       "source": "/pdf-to-word-converter",
       "destination": "/frontend/pdf-to-word-converter.html"
     },
