Move: PDF to Word pages from frontend/ to root directory (DocTools) - Updated vercel.json paths

--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,15 @@
   "rewrites": [
     {
       "source": "/pdf-to-word",
-      "destination": "/frontend/pdf-to-word.html"
+      "destination": "/pdf-to-word.html"
     },
     {
       "source": "/pdf-to-word.html",
-      "destination": "/frontend/pdf-to-word.html"
+      "destination": "/pdf-to-word.html"
     },
     {
       "source": "/pdf-to-word-converter",
-      "destination": "/frontend/pdf-to-word-converter.html"
+      "destination": "/pdf-to-word-converter.html"
     },
     {
       "source": "/pdf-to-jpg",
