Production fixes: Robust LibreOffice conversion, improved error logging, DocAI validation, credit modal integration, pdf-metadata fix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,25 +4,23 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies including Hindi and international fonts
-RUN apt-get update && apt-get install -y \
-    libreoffice \
+# Install system dependencies including LibreOffice and fonts
+RUN apt-get update && apt-get install -y --no-install-recommends \
     libreoffice-writer \
-    fonts-dejavu \
+    libreoffice-common \
+    libreoffice-core \
     fonts-dejavu-core \
-    fonts-dejavu-extra \
-    fonts-indic \
-    fonts-noto \
-    fonts-noto-core \
-    fonts-noto-color-emoji \
     fonts-noto-cjk \
-    fonts-noto-cjk-extra \
+    fonts-noto-color-emoji \
     fonts-liberation \
     fonts-liberation2 \
     poppler-utils \
     libjpeg-dev \
     zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
+
+# Ensure soffice is in PATH
+ENV PATH="/usr/bin:${PATH}"
 
 # Download and install Krutidev and Chanakya fonts (if available)
 # Note: These fonts may need to be manually added or downloaded from official sources
