Fix: Update vercel.json paths, add GCS_INPUT_BUCKET to deployment, create deployment checklist

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,11 @@
     },
     {
       "source": "/pdf-to-word-converter",
-      "destination": "/pdf-to-word-converter.html"
+      "destination": "/frontend/pdf-to-word-converter.html"
+    },
+    {
+      "source": "/pdf-to-word-converter.html",
+      "destination": "/frontend/pdf-to-word-converter.html"
     },
     {
       "source": "/pdf-to-jpg",
