Fix: Remove PyTorch backend, use BiRefNet; Fix image preview in workspace; Update all API endpoints to birefnet; Standardize Cloud Run URLs

--- a/vercel.json
+++ b/vercel.json
@@ -26,6 +26,22 @@
       "destination": "/frontend/pdf-editor.html"
     },
     {
+      "source": "/background-workspace",
+      "destination": "/server/public/background-workspace.html"
+    },
+    {
+      "source": "/background-workspace.html",
+      "destination": "/server/public/background-workspace.html"
+    },
+    {
+      "source": "/background-remover",
+      "destination": "/server/public/background-remover.html"
+    },
+    {
+      "source": "/background-remover.html",
+      "destination": "/server/public/background-remover.html"
+    },
+    {
       "source": "/",
       "destination": "/index.html"
     },
