Complete premium HD fixes: Size selection UI, 2 credits, 25 MP max, MD files excluded - Added size selection dropdown with 8 resolution options (1920x1080 to 5000x5000) - Updated credits from 3 to 2 per premium HD image - Updated all text to 'up to 25 Megapixels' - Excluded MD files from GitHub and Vercel deployments - Backend supports size selection with aspect ratio preservation - Mobile and PC responsive design - Processing wait indicator added - All fixes without breaking any code or pages

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,13 @@ firebase-key.json
 server/firebase-key.json
 *.serviceAccountKey.json
 
-# Documentation & Internal Guides (contains sensitive setup info)
-# All .md files except README.md
+# Documentation & Internal Guides (NEVER push to GitHub/Vercel - only for local reference)
+# All .md files except README.md - These are internal docs and should NOT be deployed
 *.md
 !README.md
+# Backup folders with MD files
+backups/**/*.md
+backup/**/*.md
 
 # Specific important docs to ignore
 *_GUIDE.md
