--- a/.vercelignore
+++ b/.vercelignore
@@ -29,9 +29,26 @@ server/node_modules/
 *.log
 logs/
 
-# Development files
+# Development files - NEVER deploy MD files to Vercel (only for local reference)
 *.md
 !README.md
+# Backup folders
+backups/
+backup/
+# All documentation files
+*_GUIDE.md
+*_SUMMARY.md
+*_IMPLEMENTATION.md
+*_SETUP.md
+*_STATUS.md
+*_COMPLETE.md
+*_FIX.md
+*_REPORT.md
+*_ANALYSIS.md
+*_VERIFICATION.md
+*_CHECKLIST.md
+*_INSTRUCTIONS.md
+*_DEPLOYMENT.md
 
 # IDE
 .idea/
