Fix path routing: Use root-level background pages instead of server/public - Updated vercel.json to route to root paths - Synced background-workspace.html and background-remover.html to root - Fixes 404 errors from server/public paths

--- a/vercel.json
+++ b/vercel.json
@@ -27,19 +27,19 @@
     },
     {
       "source": "/background-workspace",
-      "destination": "/server/public/background-workspace.html"
+      "destination": "/background-workspace.html"
     },
     {
       "source": "/background-workspace.html",
-      "destination": "/server/public/background-workspace.html"
+      "destination": "/background-workspace.html"
     },
     {
       "source": "/background-remover",
-      "destination": "/server/public/background-remover.html"
+      "destination": "/background-remover.html"
     },
     {
       "source": "/background-remover.html",
-      "destination": "/server/public/background-remover.html"
+      "destination": "/background-remover.html"
     },
     {
       "source": "/",
