Fix: Remove canvas from preview rendering - use direct PNG only
- Free preview: Direct PNG from backend, no canvas rendering
- Premium preview: Direct PNG from backend, no canvas rendering
- Canvas only used for download operations
- Fixed freePreviewInProgress flag reset in all error paths
- Updated .gitignore to ignore verification/deployment MD files
- Synced background-workspace.html files (root and server/public)

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ COMPLETE_FEATURES_EXPLANATION.md
 IMAGE_EDITOR_FEATURES.md
 PROFESSIONAL_EDITOR_SUMMARY.md
 IMPLEMENTATION_SUMMARY.md
+VERIFICATION_REPORT.md
+VERCEL_DEPLOYMENT_FIX.md
+CREDIT_SYSTEM_USAGE.md
 CLOUDRUN_URL_SETUP.md
 GOOGLE_CLOUD_RUN_SETUP.md
 RENDER_DEPLOYMENT.md
