FIX: Remove third-party reference in pipeline name, add analysis MD files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ EXCEL_UNLOCKER_GUIDE.md
 EXCEL_UNLOCKER_SETUP.md
 QUICK_REFERENCE.txt
 FIX_404_ERROR_GUIDE.txt
+DEEP_ANALYSIS_REPORT.md
+COMPARISON_TABLE.md
+VERIFICATION_REPORT.md
 *.log
 
 # Python
