--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "API for easyjpgtopdf.com",
   "main": "api/create-order.js",
   "dependencies": {
-    "razorpay": "^2.9.2",
+    "@google-cloud/vision": "^4.0.0",
     "firebase-admin": "^11.11.0",
-    "@google-cloud/vision": "^4.0.0"
+    "form-data": "^4.0.5",
+    "formidable": "^3.5.4",
+    "razorpay": "^2.9.2"
   },
   "engines": {
     "node": "22.x"
