Fix: Free preview always uses multipart/form-data with File object, remove base64/dataURL; Add forensic validation logging

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ FIX_404_ERROR_GUIDE.txt
 DEEP_ANALYSIS_REPORT.md
 COMPARISON_TABLE.md
 VERIFICATION_REPORT.md
+# Forensic validation docs
+FORENSIC_VALIDATION_SUMMARY.md
+RUN_FORENSIC_VALIDATION.md
+FREE_PREVIEW_FIX_SUMMARY.md
 *.log
 
 # Python
